--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -14,7 +15,17 @@
                 <div id="my-carousel-container">
                     <div class="carousel">
                         <div class="images">
-    
+                            <img src="./img/01.webp" class="main-image" alt="title">
+                            <img src="./img/02.webp" class="main-image" alt="title">
+                            <img src="./img/03.webp" class="main-image" alt="title">
+                            <img src="./img/04.webp" class="main-image" alt="title">
+                            <img src="./img/05.webp" class="main-image" alt="title">
+                            <div class="position-absolute prev">
+                                <i class="fas fa-angle-left "></i>
+                            </div>
+                            <div class="position-absolute next">
+                                <i class="fas fa-angle-right "></i>
+                            </div>
                         </div>
                     </div>
                 </div>
