[UPD]Ciclo l'array

--- a/index.html
+++ b/index.html
@@ -15,11 +15,41 @@
                 <div id="my-carousel-container">
                     <div class="carousel">
                         <div class="images">
+                            <div class="position-relative h-100">
                             <img src="./img/01.webp" class="main-image" alt="title">
-                            <img src="./img/02.webp" class="main-image" alt="title">
-                            <img src="./img/03.webp" class="main-image" alt="title">
-                            <img src="./img/04.webp" class="main-image" alt="title">
-                            <img src="./img/05.webp" class="main-image" alt="title">
+                                <div class="txt-image">
+                                    <h3>Lorem</h3>
+                                    <p>Lorem</p>
+                                </div>
+                            </div>
+                            <div class="position-relative h-100">
+                                <img src="./img/02.webp" class="main-image" alt="title">
+                                <div class="txt-image">
+                                    <h3>Lorem</h3>
+                                    <p>Lorem</p>
+                                </div>
+                            </div>
+                            <div class="position-relative h-100">
+                                <img src="./img/03.webp" class="main-image" alt="title">
+                                <div class="txt-image">
+                                    <h3>Lorem</h3>
+                                    <p>Lorem</p>
+                                </div>
+                            </div>
+                            <div class="position-relative h-100">
+                                <img src="./img/04.webp" class="main-image" alt="title">
+                                <div class="txt-image">
+                                    <h3>Lorem</h3>
+                                    <p>Lorem</p>
+                                </div>
+                            </div>
+                            <div class="position-relative h-100">
+                                <img src="./img/05.webp" class="main-image" alt="title">
+                                <div class="txt-image">
+                                    <h3>Lorem</h3>
+                                    <p>Lorem</p>
+                                </div>
+                            </div>
                             <div class="position-absolute prev">
                                 <i class="fas fa-angle-left "></i>
                             </div>
